# cors

./: CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: docs.yml
docs/: Doxyfile  api-mapping.md  dependency-analysis.md  divergences.md  port-checklist.md  research.md  test-plan.md
docs/sphinx/: conf.py  index.rst
docs/sphinx/api/: cors.rst  index.rst
docs/sphinx/examples/: index.rst  policy.rst
docs/sphinx/getting-started/: installation.rst  quickstart.rst
docs/sphinx/guides/: compatibility-and-scope.rst  index.rst  origin-and-preflight.rst
docs/sphinx/tutorials/: cors-policy.rst  index.rst
examples/: policy.cpp
include/polycpp/cors/: cors.hpp
include/polycpp/cors/detail/: aggregator.hpp
src/: cors.cpp
tests/: test_smoke.cpp
